name:                liquidate 
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     
      RTick
    , ISort 
    , ISortSorted  
    , LList  
    , ISortLazy 
  other-modules:
      Language.Haskell.Liquid.ProofCombinators 
    , List     
  build-depends:
      liquidhaskell == 0.9.10.1
  hs-source-dirs:      src
  default-language:    Haskell2010
